Remove padding of latest content to make sure it have better display on mobile

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -6608,7 +6608,6 @@ a.bg-danger:focus, a.bg-danger:hover {
     .post-meta a {
       color: #ccc; }
   .home-content .latest-content {
-    padding-right: 3rem;
     padding-bottom: 2rem; }
     .home-content .latest-content h5 {
       margin-bottom: 2rem; }
