--- a/src/public/sass/components/_content.scss
+++ b/src/public/sass/components/_content.scss
@@ -119,7 +119,6 @@
 
   .home-content {
     .latest-content {
-      padding-right: 3rem;
       padding-bottom: 2rem;
 
       h5 {
